# solon

./: .gitignore  .sl.json.example  .slignore.example  CHANGELOG.md  Cargo.toml  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml  release.yml  sync-plugin.yml
agents/: debugger.md  docs-manager.md  git-manager.md  planner.md  researcher.md
core/: Makefile  go.mod  main.go
core/cmd/: plan.go  plan_archive.go  plan_red_team.go  plan_resolve.go  plan_scaffold.go  plan_validate.go  report.go  report_index.go  root.go  task.go  task_hydrate.go  task_sync.go  workflow.go  workflow_status.go
core/internal/: integration_test.go
crates/solon-cli/: Cargo.toml
crates/solon-cli/src/: lib.rs
crates/solon-cli/src/cmd/: lsp.rs
crates/solon-cli/src/hashline/: canonicalize.rs  edit.rs  format.rs  hash.rs  mod.rs  validate.rs
crates/solon-cli/src/lsp/: client.rs  mod.rs
crates/solon-common/: Cargo.toml
crates/solon-core/: Cargo.toml
crates/solon-core/src/: lib.rs
crates/solon-core/src/cmd/: hook.rs  mod.rs  plan.rs  report.rs  skill.rs  task.rs  workflow.rs
crates/solon-core/src/config/: loader.rs  mod.rs
crates/solon-core/src/hooks/: comment_slop_checker.rs  cook_reminder.rs  descriptive_name.rs  dev_rules.rs  intent_gate.rs  mod.rs  post_edit.rs  preemptive_compaction.rs  privacy_block.rs  scout_block.rs  session_init.rs  ship_reminder.rs  statusline.rs  subagent_init.rs  task_completed.rs  team_context.rs  teammate_idle.rs  todo_continuation_enforcer.rs  tool_output_truncation.rs  usage_awareness.rs  version.rs  wisdom_accumulator.rs
crates/solon-core/src/plan/: mod.rs  naming.rs  resolver.rs  scaffolder.rs  validator.rs
crates/solon-core/src/report/: indexer.rs  mod.rs
crates/solon-core/src/session/: mod.rs  state.rs
crates/solon-core/src/task/: hydrator.rs  mod.rs  syncer.rs
crates/solon-core/src/template/: embed.rs  mod.rs
crates/solon-core/src/workflow/: mod.rs  status.rs
docs/: README.md  api-reference.md  code-standards.md  codebase-summary.md  faq-troubleshooting.md  project-overview-pdr.md  system-architecture.md  user-guide.md
hooks/: README.md  hooks.json  privacy-block.cjs  scout-block.cjs
hooks/scripts/: .gitignore  Makefile  go.mod  main.go  statusline.ts
plans/260313-0346-solon-plugin-implementation/: phase-01-project-setup.md  phase-02-hashline-core.md  phase-03-hashline-edit.md  phase-04-ast-grep-integration.md  phase-05-lsp-integration.md  phase-06-plugin-integration.md  phase-07-testing-and-release.md  plan.md
plans/260314-1208-p2-intent-gate-hook/: plan.md  (+1 more)
scripts/: ensure-binary.sh  install.sh  release.sh
src/: main.rs
src/ast/: mod.rs  (+2 more)
tests/: cli_ast.rs  cli_edit.rs  cli_lsp.rs  cli_read.rs
(+280 files in other folders)
