[package]
name = "solon-cli"
version = "0.1.1"
edition = "2021"
description = "Hashline read/edit, AST-grep, LSP tools for Claude Code"
license = "Apache-2.0"
repository = "https://github.com/solon-dev/solon"

[[bin]]
name = "sl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
xxhash-rust = { version = "0.8", features = ["xxh32"] }
lsp-types = "0.97"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
url = "2.5.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[test]]
name = "read_test"
path = "tests/integration/read_test.rs"

[[test]]
name = "edit_test"
path = "tests/integration/edit_test.rs"

[profile.release]
strip = true
lto = true
opt-level = "z"
