[workspace]
members = ["crates/solon-common", "crates/solon-cli", "crates/solon-core"]

[package]
name = "solon"
version = "0.4.8"
edition = "2021"
description = "Solon — Rust CLI and workflow engine for Claude Code"
license = "Apache-2.0"
repository = "https://github.com/solon-dev/solon"

[[bin]]
name = "sl"
path = "src/main.rs"

[dependencies]
solon-cli = { path = "crates/solon-cli" }
solon-core = { path = "crates/solon-core" }
solon-common = { path = "crates/solon-common" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[test]]
name = "read_test"
path = "tests/integration/read_test.rs"

[[test]]
name = "edit_test"
path = "tests/integration/edit_test.rs"

[profile.release]
strip = true
lto = true
opt-level = "z"
